minijava/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE
    LINE_COMMENT
    BLOCK_COMMENT
    SYSTEM

Grammar

Rule 0     S' -> goal
Rule 1     goal -> mainclass classdeclaration_star
Rule 2     mainclass -> CLASS id LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE
Rule 3     classdeclaration_star -> classdeclaration classdeclaration_star
Rule 4     classdeclaration_star -> empty
Rule 5     classdeclaration -> CLASS id extends_opt LBRACE vardeclaration_star methoddeclaration_star RBRACE
Rule 6     extends_opt -> EXTENDS id
Rule 7     extends_opt -> empty
Rule 8     statement -> LBRACE statement_star RBRACE
Rule 9     statement_star -> statement statement_star
Rule 10    statement_star -> empty
Rule 11    statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 12    statement -> WHILE LPAREN expression RPAREN statement
Rule 13    statement -> SYSTEM_PRINTLN LPAREN expression RPAREN SEMICOLON
Rule 14    statement -> id LET expression SEMICOLON
Rule 15    statement -> id LBRACKET expression RBRACKET LET expression SEMICOLON
Rule 16    vardeclaration_star -> vardeclaration vardeclaration_star
Rule 17    vardeclaration_star -> empty
Rule 18    vardeclaration -> type id SEMICOLON
Rule 19    type -> INT LBRACKET RBRACKET
Rule 20    type -> BOOLEAN
Rule 21    type -> INT
Rule 22    type -> id
Rule 23    methoddeclaration_star -> methoddeclaration methoddeclaration_star
Rule 24    methoddeclaration_star -> empty
Rule 25    methoddeclaration -> PUBLIC type id LPAREN type id params_opt RPAREN LBRACE vardeclaration_star statement_star RETURN expression SEMICOLON RBRACE
Rule 26    params_opt -> COMMA type id params_opt
Rule 27    params_opt -> empty
Rule 28    expression -> expression AND expression
Rule 29    expression -> expression LESS_THAN expression
Rule 30    expression -> expression PLUS expression
Rule 31    expression -> expression MINUS expression
Rule 32    expression -> expression TIMES expression
Rule 33    expression -> expression LBRACKET expression RBRACKET
Rule 34    expression -> expression DOT LENGTH
Rule 35    expression -> expression DOT id LPAREN expression expression_opt RPAREN
Rule 36    expression_opt -> COMMA expression expression_opt
Rule 37    expression_opt -> empty
Rule 38    expression -> LIT_INT
Rule 39    expression -> TRUE
Rule 40    expression -> FALSE
Rule 41    expression -> id
Rule 42    expression -> THIS
Rule 43    expression -> NEW INT LBRACKET expression RBRACKET
Rule 44    expression -> NEW id LPAREN RPAREN
Rule 45    expression -> NOT expression
Rule 46    expression -> LPAREN expression RPAREN
Rule 47    id -> ID
Rule 48    empty -> <empty>

Terminals, with rules where they appear

AND                  : 28
BLOCK_COMMENT        : 
BOOLEAN              : 20
CLASS                : 2 5
COMMA                : 26 36
DOT                  : 34 35
ELSE                 : 11
EXTENDS              : 6
FALSE                : 40
ID                   : 47
IF                   : 11
INT                  : 19 21 43
LBRACE               : 2 2 5 8 25
LBRACKET             : 2 15 19 33 43
LENGTH               : 34
LESS_THAN            : 29
LET                  : 14 15
LINE_COMMENT         : 
LIT_INT              : 38
LPAREN               : 2 11 12 13 25 35 44 46
MAIN                 : 2
MINUS                : 31
NEW                  : 43 44
NOT                  : 45
PLUS                 : 30
PUBLIC               : 2 25
RBRACE               : 2 2 5 8 25
RBRACKET             : 2 15 19 33 43
RETURN               : 25
RPAREN               : 2 11 12 13 25 35 44 46
SEMICOLON            : 13 14 15 18 25
STATIC               : 2
STRING               : 2
SYSTEM               : 
SYSTEM_PRINTLN       : 13
THIS                 : 42
TIMES                : 32
TRUE                 : 39
VOID                 : 2
WHILE                : 12
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

classdeclaration     : 3
classdeclaration_star : 1 3
empty                : 4 7 10 17 24 27 37
expression           : 11 12 13 14 15 15 25 28 28 29 29 30 30 31 31 32 32 33 33 34 35 35 36 43 45 46
expression_opt       : 35 36
extends_opt          : 5
goal                 : 0
id                   : 2 2 5 6 14 15 18 22 25 25 26 35 41 44
mainclass            : 1
methoddeclaration    : 23
methoddeclaration_star : 5 23
params_opt           : 25 26
statement            : 2 9 11 11 12
statement_star       : 8 9 25
type                 : 18 25 25 26
vardeclaration       : 16
vardeclaration_star  : 5 16 25

Parsing method: LALR

state 0

    (0) S' -> . goal
    (1) goal -> . mainclass classdeclaration_star
    (2) mainclass -> . CLASS id LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE

    CLASS           shift and go to state 1

    mainclass                      shift and go to state 3
    goal                           shift and go to state 2

state 1

    (2) mainclass -> CLASS . id LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE
    (47) id -> . ID

    ID              shift and go to state 5

    id                             shift and go to state 4

state 2

    (0) S' -> goal .



state 3

    (1) goal -> mainclass . classdeclaration_star
    (3) classdeclaration_star -> . classdeclaration classdeclaration_star
    (4) classdeclaration_star -> . empty
    (5) classdeclaration -> . CLASS id extends_opt LBRACE vardeclaration_star methoddeclaration_star RBRACE
    (48) empty -> .

    CLASS           shift and go to state 8
    $end            reduce using rule 48 (empty -> .)

    classdeclaration               shift and go to state 7
    empty                          shift and go to state 6
    classdeclaration_star          shift and go to state 9

state 4

    (2) mainclass -> CLASS id . LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE

    LBRACE          shift and go to state 10


state 5

    (47) id -> ID .

    RPAREN          reduce using rule 47 (id -> ID .)
    COMMA           reduce using rule 47 (id -> ID .)
    AND             reduce using rule 47 (id -> ID .)
    LESS_THAN       reduce using rule 47 (id -> ID .)
    PLUS            reduce using rule 47 (id -> ID .)
    MINUS           reduce using rule 47 (id -> ID .)
    TIMES           reduce using rule 47 (id -> ID .)
    LBRACKET        reduce using rule 47 (id -> ID .)
    DOT             reduce using rule 47 (id -> ID .)
    SEMICOLON       reduce using rule 47 (id -> ID .)
    RBRACKET        reduce using rule 47 (id -> ID .)
    ID              reduce using rule 47 (id -> ID .)
    LET             reduce using rule 47 (id -> ID .)
    LPAREN          reduce using rule 47 (id -> ID .)
    LBRACE          reduce using rule 47 (id -> ID .)
    EXTENDS         reduce using rule 47 (id -> ID .)


state 6

    (4) classdeclaration_star -> empty .

    $end            reduce using rule 4 (classdeclaration_star -> empty .)


state 7

    (3) classdeclaration_star -> classdeclaration . classdeclaration_star
    (3) classdeclaration_star -> . classdeclaration classdeclaration_star
    (4) classdeclaration_star -> . empty
    (5) classdeclaration -> . CLASS id extends_opt LBRACE vardeclaration_star methoddeclaration_star RBRACE
    (48) empty -> .

    CLASS           shift and go to state 8
    $end            reduce using rule 48 (empty -> .)

    classdeclaration               shift and go to state 7
    empty                          shift and go to state 6
    classdeclaration_star          shift and go to state 11

state 8

    (5) classdeclaration -> CLASS . id extends_opt LBRACE vardeclaration_star methoddeclaration_star RBRACE
    (47) id -> . ID

    ID              shift and go to state 5

    id                             shift and go to state 12

state 9

    (1) goal -> mainclass classdeclaration_star .

    $end            reduce using rule 1 (goal -> mainclass classdeclaration_star .)


state 10

    (2) mainclass -> CLASS id LBRACE . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE

    PUBLIC          shift and go to state 13


state 11

    (3) classdeclaration_star -> classdeclaration classdeclaration_star .

    $end            reduce using rule 3 (classdeclaration_star -> classdeclaration classdeclaration_star .)


state 12

    (5) classdeclaration -> CLASS id . extends_opt LBRACE vardeclaration_star methoddeclaration_star RBRACE
    (6) extends_opt -> . EXTENDS id
    (7) extends_opt -> . empty
    (48) empty -> .

    EXTENDS         shift and go to state 15
    LBRACE          reduce using rule 48 (empty -> .)

    extends_opt                    shift and go to state 14
    empty                          shift and go to state 16

state 13

    (2) mainclass -> CLASS id LBRACE PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE

    STATIC          shift and go to state 17


state 14

    (5) classdeclaration -> CLASS id extends_opt . LBRACE vardeclaration_star methoddeclaration_star RBRACE

    LBRACE          shift and go to state 18


state 15

    (6) extends_opt -> EXTENDS . id
    (47) id -> . ID

    ID              shift and go to state 5

    id                             shift and go to state 19

state 16

    (7) extends_opt -> empty .

    LBRACE          reduce using rule 7 (extends_opt -> empty .)


state 17

    (2) mainclass -> CLASS id LBRACE PUBLIC STATIC . VOID MAIN LPAREN STRING LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE

    VOID            shift and go to state 20


state 18

    (5) classdeclaration -> CLASS id extends_opt LBRACE . vardeclaration_star methoddeclaration_star RBRACE
    (16) vardeclaration_star -> . vardeclaration vardeclaration_star
    (17) vardeclaration_star -> . empty
    (18) vardeclaration -> . type id SEMICOLON
    (48) empty -> .
    (19) type -> . INT LBRACKET RBRACKET
    (20) type -> . BOOLEAN
    (21) type -> . INT
    (22) type -> . id
    (47) id -> . ID

    PUBLIC          reduce using rule 48 (empty -> .)
    RBRACE          reduce using rule 48 (empty -> .)
    INT             shift and go to state 26
    BOOLEAN         shift and go to state 25
    ID              shift and go to state 5

    type                           shift and go to state 27
    empty                          shift and go to state 24
    id                             shift and go to state 21
    vardeclaration                 shift and go to state 22
    vardeclaration_star            shift and go to state 23

state 19

    (6) extends_opt -> EXTENDS id .

    LBRACE          reduce using rule 6 (extends_opt -> EXTENDS id .)


state 20

    (2) mainclass -> CLASS id LBRACE PUBLIC STATIC VOID . MAIN LPAREN STRING LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE

    MAIN            shift and go to state 28


state 21

    (22) type -> id .

    ID              reduce using rule 22 (type -> id .)


state 22

    (16) vardeclaration_star -> vardeclaration . vardeclaration_star
    (16) vardeclaration_star -> . vardeclaration vardeclaration_star
    (17) vardeclaration_star -> . empty
    (18) vardeclaration -> . type id SEMICOLON
    (48) empty -> .
    (19) type -> . INT LBRACKET RBRACKET
    (20) type -> . BOOLEAN
    (21) type -> . INT
    (22) type -> . id
    (47) id -> . ID

  ! shift/reduce conflict for ID resolved as shift
    PUBLIC          reduce using rule 48 (empty -> .)
    RBRACE          reduce using rule 48 (empty -> .)
    LBRACE          reduce using rule 48 (empty -> .)
    IF              reduce using rule 48 (empty -> .)
    WHILE           reduce using rule 48 (empty -> .)
    SYSTEM_PRINTLN  reduce using rule 48 (empty -> .)
    RETURN          reduce using rule 48 (empty -> .)
    INT             shift and go to state 26
    BOOLEAN         shift and go to state 25
    ID              shift and go to state 5

  ! ID              [ reduce using rule 48 (empty -> .) ]

    id                             shift and go to state 21
    type                           shift and go to state 27
    vardeclaration                 shift and go to state 22
    vardeclaration_star            shift and go to state 29
    empty                          shift and go to state 24

state 23

    (5) classdeclaration -> CLASS id extends_opt LBRACE vardeclaration_star . methoddeclaration_star RBRACE
    (23) methoddeclaration_star -> . methoddeclaration methoddeclaration_star
    (24) methoddeclaration_star -> . empty
    (25) methoddeclaration -> . PUBLIC type id LPAREN type id params_opt RPAREN LBRACE vardeclaration_star statement_star RETURN expression SEMICOLON RBRACE
    (48) empty -> .

    PUBLIC          shift and go to state 32
    RBRACE          reduce using rule 48 (empty -> .)

    methoddeclaration              shift and go to state 30
    methoddeclaration_star         shift and go to state 31
    empty                          shift and go to state 33

state 24

    (17) vardeclaration_star -> empty .

    PUBLIC          reduce using rule 17 (vardeclaration_star -> empty .)
    RBRACE          reduce using rule 17 (vardeclaration_star -> empty .)
    LBRACE          reduce using rule 17 (vardeclaration_star -> empty .)
    IF              reduce using rule 17 (vardeclaration_star -> empty .)
    WHILE           reduce using rule 17 (vardeclaration_star -> empty .)
    SYSTEM_PRINTLN  reduce using rule 17 (vardeclaration_star -> empty .)
    ID              reduce using rule 17 (vardeclaration_star -> empty .)
    RETURN          reduce using rule 17 (vardeclaration_star -> empty .)


state 25

    (20) type -> BOOLEAN .

    ID              reduce using rule 20 (type -> BOOLEAN .)


state 26

    (19) type -> INT . LBRACKET RBRACKET
    (21) type -> INT .

    LBRACKET        shift and go to state 34
    ID              reduce using rule 21 (type -> INT .)


state 27

    (18) vardeclaration -> type . id SEMICOLON
    (47) id -> . ID

    ID              shift and go to state 5

    id                             shift and go to state 35

state 28

    (2) mainclass -> CLASS id LBRACE PUBLIC STATIC VOID MAIN . LPAREN STRING LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE

    LPAREN          shift and go to state 36


state 29

    (16) vardeclaration_star -> vardeclaration vardeclaration_star .

    PUBLIC          reduce using rule 16 (vardeclaration_star -> vardeclaration vardeclaration_star .)
    RBRACE          reduce using rule 16 (vardeclaration_star -> vardeclaration vardeclaration_star .)
    LBRACE          reduce using rule 16 (vardeclaration_star -> vardeclaration vardeclaration_star .)
    IF              reduce using rule 16 (vardeclaration_star -> vardeclaration vardeclaration_star .)
    WHILE           reduce using rule 16 (vardeclaration_star -> vardeclaration vardeclaration_star .)
    SYSTEM_PRINTLN  reduce using rule 16 (vardeclaration_star -> vardeclaration vardeclaration_star .)
    ID              reduce using rule 16 (vardeclaration_star -> vardeclaration vardeclaration_star .)
    RETURN          reduce using rule 16 (vardeclaration_star -> vardeclaration vardeclaration_star .)


state 30

    (23) methoddeclaration_star -> methoddeclaration . methoddeclaration_star
    (23) methoddeclaration_star -> . methoddeclaration methoddeclaration_star
    (24) methoddeclaration_star -> . empty
    (25) methoddeclaration -> . PUBLIC type id LPAREN type id params_opt RPAREN LBRACE vardeclaration_star statement_star RETURN expression SEMICOLON RBRACE
    (48) empty -> .

    PUBLIC          shift and go to state 32
    RBRACE          reduce using rule 48 (empty -> .)

    empty                          shift and go to state 33
    methoddeclaration_star         shift and go to state 37
    methoddeclaration              shift and go to state 30

state 31

    (5) classdeclaration -> CLASS id extends_opt LBRACE vardeclaration_star methoddeclaration_star . RBRACE

    RBRACE          shift and go to state 38


state 32

    (25) methoddeclaration -> PUBLIC . type id LPAREN type id params_opt RPAREN LBRACE vardeclaration_star statement_star RETURN expression SEMICOLON RBRACE
    (19) type -> . INT LBRACKET RBRACKET
    (20) type -> . BOOLEAN
    (21) type -> . INT
    (22) type -> . id
    (47) id -> . ID

    INT             shift and go to state 26
    BOOLEAN         shift and go to state 25
    ID              shift and go to state 5

    type                           shift and go to state 39
    id                             shift and go to state 21

state 33

    (24) methoddeclaration_star -> empty .

    RBRACE          reduce using rule 24 (methoddeclaration_star -> empty .)


state 34

    (19) type -> INT LBRACKET . RBRACKET

    RBRACKET        shift and go to state 40


state 35

    (18) vardeclaration -> type id . SEMICOLON

    SEMICOLON       shift and go to state 41


state 36

    (2) mainclass -> CLASS id LBRACE PUBLIC STATIC VOID MAIN LPAREN . STRING LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE

    STRING          shift and go to state 42


state 37

    (23) methoddeclaration_star -> methoddeclaration methoddeclaration_star .

    RBRACE          reduce using rule 23 (methoddeclaration_star -> methoddeclaration methoddeclaration_star .)


state 38

    (5) classdeclaration -> CLASS id extends_opt LBRACE vardeclaration_star methoddeclaration_star RBRACE .

    CLASS           reduce using rule 5 (classdeclaration -> CLASS id extends_opt LBRACE vardeclaration_star methoddeclaration_star RBRACE .)
    $end            reduce using rule 5 (classdeclaration -> CLASS id extends_opt LBRACE vardeclaration_star methoddeclaration_star RBRACE .)


state 39

    (25) methoddeclaration -> PUBLIC type . id LPAREN type id params_opt RPAREN LBRACE vardeclaration_star statement_star RETURN expression SEMICOLON RBRACE
    (47) id -> . ID

    ID              shift and go to state 5

    id                             shift and go to state 43

state 40

    (19) type -> INT LBRACKET RBRACKET .

    ID              reduce using rule 19 (type -> INT LBRACKET RBRACKET .)


state 41

    (18) vardeclaration -> type id SEMICOLON .

    INT             reduce using rule 18 (vardeclaration -> type id SEMICOLON .)
    BOOLEAN         reduce using rule 18 (vardeclaration -> type id SEMICOLON .)
    ID              reduce using rule 18 (vardeclaration -> type id SEMICOLON .)
    PUBLIC          reduce using rule 18 (vardeclaration -> type id SEMICOLON .)
    RBRACE          reduce using rule 18 (vardeclaration -> type id SEMICOLON .)
    LBRACE          reduce using rule 18 (vardeclaration -> type id SEMICOLON .)
    IF              reduce using rule 18 (vardeclaration -> type id SEMICOLON .)
    WHILE           reduce using rule 18 (vardeclaration -> type id SEMICOLON .)
    SYSTEM_PRINTLN  reduce using rule 18 (vardeclaration -> type id SEMICOLON .)
    RETURN          reduce using rule 18 (vardeclaration -> type id SEMICOLON .)


state 42

    (2) mainclass -> CLASS id LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING . LBRACKET RBRACKET id RPAREN LBRACE statement RBRACE RBRACE

    LBRACKET        shift and go to state 44


state 43

    (25) methoddeclaration -> PUBLIC type id . LPAREN type id params_opt RPAREN LBRACE vardeclaration_star statement_star RETURN expression SEMICOLON RBRACE

    LPAREN          shift and go to state 45


state 44

    (2) mainclass -> CLASS id LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET . RBRACKET id RPAREN LBRACE statement RBRACE RBRACE

    RBRACKET        shift and go to state 46


state 45

    (25) methoddeclaration -> PUBLIC type id LPAREN . type id params_opt RPAREN LBRACE vardeclaration_star statement_star RETURN expression SEMICOLON RBRACE
    (19) type -> . INT LBRACKET RBRACKET
    (20) type -> . BOOLEAN
    (21) type -> . INT
    (22) type -> . id
    (47) id -> . ID

    INT             shift and go to state 26
    BOOLEAN         shift and go to state 25
    ID              shift and go to state 5

    type                           shift and go to state 47
    id                             shift and go to state 21

state 46

    (2) mainclass -> CLASS id LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET . id RPAREN LBRACE statement RBRACE RBRACE
    (47) id -> . ID

    ID              shift and go to state 5

    id                             shift and go to state 48

state 47

    (25) methoddeclaration -> PUBLIC type id LPAREN type . id params_opt RPAREN LBRACE vardeclaration_star statement_star RETURN expression SEMICOLON RBRACE
    (47) id -> . ID

    ID              shift and go to state 5

    id                             shift and go to state 49

state 48

    (2) mainclass -> CLASS id LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET id . RPAREN LBRACE statement RBRACE RBRACE

    RPAREN          shift and go to state 50


state 49

    (25) methoddeclaration -> PUBLIC type id LPAREN type id . params_opt RPAREN LBRACE vardeclaration_star statement_star RETURN expression SEMICOLON RBRACE
    (26) params_opt -> . COMMA type id params_opt
    (27) params_opt -> . empty
    (48) empty -> .

    COMMA           shift and go to state 51
    RPAREN          reduce using rule 48 (empty -> .)

    empty                          shift and go to state 52
    params_opt                     shift and go to state 53

state 50

    (2) mainclass -> CLASS id LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET id RPAREN . LBRACE statement RBRACE RBRACE

    LBRACE          shift and go to state 54


state 51

    (26) params_opt -> COMMA . type id params_opt
    (19) type -> . INT LBRACKET RBRACKET
    (20) type -> . BOOLEAN
    (21) type -> . INT
    (22) type -> . id
    (47) id -> . ID

    INT             shift and go to state 26
    BOOLEAN         shift and go to state 25
    ID              shift and go to state 5

    id                             shift and go to state 21
    type                           shift and go to state 55

state 52

    (27) params_opt -> empty .

    RPAREN          reduce using rule 27 (params_opt -> empty .)


state 53

    (25) methoddeclaration -> PUBLIC type id LPAREN type id params_opt . RPAREN LBRACE vardeclaration_star statement_star RETURN expression SEMICOLON RBRACE

    RPAREN          shift and go to state 56


state 54
